--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "gulp-prettier": "^1.1.0",
     "husky": "^0.15.0-rc.13",
     "mocha": "^5.1.1",
-    "nyc": "^11.7.1",
+    "nyc": "^13.0.0",
     "prettier": "^1.12.1"
   },
   "dependencies": {
-    "@mediaxpost/lodashext": "^1.1.0",
+    "@dealerslink/lodash-extended": "^1.0.0",
     "@mediaxpost/memory-cache": "^1.1.1-1",
     "bluebird": "^3.5.1",
     "logstub": "^1.1.2",
