--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
-- 9
+- 10
 services:
 - redis-server
 before_script:
-- npm install -g gulp-cli
+- npm install -g gulp-cli gulp@4
 script:
 - gulp
 - npm run coverage
